--- a/templates/table/index.html.twig
+++ b/templates/table/index.html.twig
@@ -6,25 +6,13 @@
 <style>
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+    .color {color:{{ color }};}
 </style>
-
-<div class="example-wrapper">
-    <h1>Table de {{ n }}</h1>
-    <table border=1>
+    <h1 class="color" >Table de {{ n }}</h1>
+    <table border=1 class="color">
     <th>Nombre (n) x Multiplicateur = Résultat</th>
-    {% for $user in user%}
-for ($i = 1; $i <= 10; $i++)
-{
-    for ($j = 1; $j <= 10; $j++)
-    {
-        echo $i.' x '.$j.' = '.$i*$j.'<br>';
-    }
-}
+    {% for max in 0..max %}
+  <tr><td>{{ n }} * {{max}} = {{n * max}}</td></tr>
  {% endfor %}
-    <tr><td>{{ n }} * 1= {{(n * 1)}}</td></tr>
-    <tr><td>{{ n }} * 2= {{(n * 2)}}</td></tr>
-    <tr><td>{{ n }} * 3= {{(n * 3)}}</td></tr>
-    <tr><td>{{ n }} * 4= {{(n * 4)}}</td></tr>
     </table>
-</div>
 {% endblock %}
