--- a/templates/table/index.html.twig
+++ b/templates/table/index.html.twig
@@ -4,15 +4,19 @@
 
 {% block body %}
 <style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
     .color {color:{{ color }};}
 </style>
     <h1 class="color" >Table de {{ n }}</h1>
-    <table border=1 class="color">
+    <table border=0 class="color">
     <th>Nombre (n) x Multiplicateur = Résultat</th>
-    {% for max in 0..max %}
-  <tr><td>{{ n }} * {{max}} = {{n * max}}</td></tr>
+    {% for calculation in calculations %}
+  <tr>
+  <td>{{ calculation.indice }}</td>
+   <td>x</td>
+   <td>{{ n }}</td>
+   <td>=</td>
+   <td>{{ calculation.result }}</td>
+  </tr>
  {% endfor %}
     </table>
 {% endblock %}
